# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: pre-commit.yaml  static-analysis.yaml  test.yaml
examples/: example.py
multiplier/: __init__.py  multiply.py
tests/: multiplication_test.py
